[tool.poetry]
name = "pymeca"
version = "0.0.2"
description = "A middleware python package for interacting with the MECA smart contracts"
authors = ["Stefan-Dan Ciocirlan (sdcioc)"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = {extras = ["tester"], version = ">=6.15.1"}
py-solc-x = ">=2.0.2"
py-multiformats-cid = ">=0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
jupyterlab = "^4.1.2"
python-semantic-release = "^9.1.1"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
